<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LingSync Session Recorder</string>
    <string name="action_settings">Settings</string>
    <string name="record_video">Record</string>
    <string name="show_hide">Show/Hide</string>
    <string name="menu_view_session_list">View Session List</string>
    <string name="menu_view_video_gallery">View Video Gallery</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_select_session">Select Session</string>
    <string name="menu_new_session">New Session</string>
    <string name="menu_new_video">Record Video</string>
    <string name="menu_upload_video">Upload Video</string>
    <string name="video_preview">Video Preview</string>
    <string name="no_data">Welcome to the LingSync Session Recorder!.\nTo get started, select \"New Session\" from the menu dropdown.\nNext, enter the session info and/or start recording video.</string>
    <string name="menu_delete">Delete?</string>
    <string name="delete">Delete Session</string>
    <string name="dialog_verify_delete">Are you sure you want to delete this session and all videos from this session?\nThis cannot be undone!</string>
    <string name="dialog_choose_video_options">What would you like to do with this video?</string>
    <string name="open_url">Open URL</string>
    <string name="delete_video">Delete Video</string>
    <string name="dialog_verify_delete_video">Are you sure you want to delete this video?\nThis cannot be undone!</string>
    <string name="dialog_please_save">Please save session (click Confirm) before continuing.</string>
    <string name="dialog_please_upload">You must upload this file first.</string>
    <string name="dialog_welcome">Welcome!\n\n Use the dropdown menu to create or choose a session and begin recording video.</string>
    <string name="dialog_select_video">Please select a video to upload.</string>
    <string name="video_already_uploaded">This video has already been uploaded.</string>
    <string name="not_connected_to_wifi">You must have an active WiFi connection to upload video.</string>
    <string name="cancel">Cancel</string>
    <string name="notification">Notification</string>
    <string name="saved">Saved</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="ok">OK</string>
    <string name="session_required">Please create a new session or select an existing session before continuing.\nTo select a session, use the dropdown menu or select a video preview.</string>
    <string name="couch_id">Couch ID</string>
    <string name="field1">Goal</string>
    <string name="field2">Consultants</string>
    <string name="field3">Language</string>
    <string name="field4">Dialect</string>
    <string name="field5">Date Elicited</string>
    <string name="confirm">Confirm</string>
    <string name="preparing_upload">Preparing Upload</string>
    <string name="video_upload">Video Upload</string>
    <string name="contacting_server">Contacting Server</string>
    <string name="server_contacted">Server Contacted</string>
    <string name="error_while_uploading">Error While Uploading</string>
    <string name="try_again">Try Again</string>

    <item name="VIDEO_FILENAME_TAG_KEY" type="id"/>
    <item name="VIDEO_URL_TAG_KEY" type="id"/>

</resources>