<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:shrinkColumns="*"
    android:stretchColumns="*" >

    <TableRow android:layout_width="match_parent" >

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="horizontal" >

        <com.androidmontreal.weddingvideoguestbook.RobotoTextView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Roboto Thin"
            android:textSize="22sp" />
            <TextView
                style="@style/SessionLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/field1" >
            </TextView>

            <TextView
                android:id="@+id/text1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                style="@style/SessionLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/field4" >
            </TextView>

            <TextView
                android:id="@+id/text4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </TextView>
        </LinearLayout>
    </TableRow>

    <TableRow android:layout_width="match_parent" >

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/SessionLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/field2" >
            </TextView>

            <TextView
                android:id="@+id/text2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                style="@style/SessionLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/field5" >
            </TextView>

            <TextView
                android:id="@+id/text5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </TextView>
        </LinearLayout>
    </TableRow>

    <TableRow android:layout_width="match_parent" >

        <LinearLayout
            android:layout_width="0dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/SessionLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/field3" >
            </TextView>

            <TextView
                android:id="@+id/text3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </TextView>
        </LinearLayout>
    </TableRow>

</TableLayout>